[package]
name = "asmap-rs"
version = "0.1.0"
authors = ["Gleb Naumenko <naumenko.gs@gmail.com>", "RJ Rybarczyk <rj@rybar.tech>"]
edition = "2018"

[dependencies]
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
mrt-rs = "1.1.3"
structopt = "0.3.9"
url = "2.1.1"


[dependencies.reqwest]
version = "0.10.1"
features = ["blocking"]
